--- a/pom.xml
+++ b/pom.xml
@@ -48,13 +48,15 @@
       <artifactId>junit</artifactId>
       <scope>test</scope>
     </dependency>
-
-
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
-
+    <dependency>
+      <groupId>javax.servlet.jsp.jstl</groupId>
+      <artifactId>javax.servlet.jsp.jstl-api</artifactId>
+      <version>1.2.2</version>
+    </dependency>
   </dependencies>
 
   <build>
